定义领用、借用dao层

--- a/src/main/webapp/form_use_or_borrow.html
+++ b/src/main/webapp/form_use_or_borrow.html
@@ -399,14 +399,14 @@
                  有审批权限则设置为 “”
                  没有则设置为“none”
             -->
-        $.get("user/findOne", {}, function (data) {
-            var msg = "欢迎回来 " + data.name;
-
-            $("#approval-1").css("display", "none")
-            $("#approval-2").css("display", "none")
-            $("#approval-3").css("display", "none")
-
-        })
+        // $.get("user/findOne", {}, function (data) {
+        //     var msg = "欢迎回来 " + data.name;
+        //
+        //
+        // })
+        // $("#approval-1").css("display", "none")
+        // $("#approval-2").css("display", "none")
+        // $("#approval-3").css("display", "none")
 
     });
 
