--- a/src/main/webapp/form_use_or_borrow.html
+++ b/src/main/webapp/form_use_or_borrow.html
@@ -391,22 +391,23 @@
 <!-- 导入left_sidebar -->
 <script>
     $(function () {
-        $.get("left_sidebar.html",function (data) {
-            $("#left_sidebar").html(data);
-        });
-
-            <!-- 获取当前用户身份，
-                 有审批权限则设置为 “”
-                 没有则设置为“none”
-            -->
+        <!-- 获取当前用户身份，
+             有审批权限则设置为 “”
+             没有则设置为“none”
+        -->
         // $.get("user/findOne", {}, function (data) {
         //     var msg = "欢迎回来 " + data.name;
         //
         //
         // })
-        // $("#approval-1").css("display", "none")
-        // $("#approval-2").css("display", "none")
-        // $("#approval-3").css("display", "none")
+        $("#approval-1").css("display", "none")
+        $("#approval-2").css("display", "none")
+        $("#approval-3").css("display", "none")
+        $.get("left_sidebar.html",function (data) {
+            $("#left_sidebar").html(data);
+        });
+
+
 
     });
 
